--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,8 +23,7 @@ jobs:
       - name: Deploy to EC2
         run: |
           ssh ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} "
-            cd /path/to/your/app &&
-            git pull origin main &&
-            npm install --production &&
+            git pull origin alpha &&
+            docker compose up --build &&
             pm2 restart all
           "
